# glfw_glew_cmake

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CPMPackageManager.cmake  Demo.cpp  PreventInSourceBuilds.cmake
